guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: guestbook
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-issuer
spec:
  ingressClassName: kong
  rules:
    - host: guestbook.kong.bokt.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
  tls:
    - hosts:
      - guestbook.kong.bokt.nl
      secretName: guestbook-tls
